--- a/style.css
+++ b/style.css
@@ -68,8 +68,28 @@ body{
 /* carousel */
 
 
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 
+.card {
+  width: 100%;
+  max-width: 400px;
+  margin: 20px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px black;
+  transition: transform 0.3s;
+}
 
+.card:hover {
+  transform: scale(1.05);
+}
 
-
-
+@media only screen and (min-width: 768px) {
+  .card {
+    flex: 0 0 calc(50% - 40px);
+  }
+}
