--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ body{
   max-width: 400px;
   margin: 20px;
   padding: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px 10px 2px black;
   border-radius: 8px black;
   transition: transform 0.3s;
 }
